--- a/Transformation/style.css
+++ b/Transformation/style.css
@@ -22,7 +22,7 @@ body {
 
 .example__sample {
     display: flex;
-    width: 250px;
+    width: 200px;
     height: 100px;
     border-radius: 12px;
     background-color: salmon;
@@ -44,4 +44,126 @@ body {
 
 .sample--skew {
     transform: skew(12deg, 10deg);
+}
+
+.sample--transformation--center {
+    transform-origin: center;
+    transform: rotate(15deg);
+}
+
+.sample--transformation--left {
+    transform-origin: left;
+    transform: rotate(-15deg);
+}
+
+.sample--transformation--right {
+    transform-origin: right;
+    transform: rotate(55deg);
+}
+
+.sample--transformation--scale:hover {
+    transition: transform 0.5s ease-in-out;
+    transform: scale(1.2);
+}
+
+.sample--transformation--rotate:hover {
+    transition: transform 1s ease-in-out;
+    transform: rotate(360deg);
+}
+
+.sample--transformation--3d:hover {
+    transition: transform 0.6s ease-in-out;
+    transform: perspective(100px) rotateX(45deg);
+}
+
+/* Transition CSS */
+.sample--transformation--basic {
+    transition: all 1s ease-in-out;
+    background: linear-gradient(45deg, #236e08, #776eea);
+}
+
+.sample--transformation--basic:hover {
+    background: linear-gradient(45deg, #776eea, #236e08);
+    transform: scale(1.3);
+}
+
+.sample--transformation--delay {
+    transition: all 0.3s ease-in 0.5s;
+    background: linear-gradient(45deg, #236e08, #776eea);
+}
+
+.sample--transformation--delay:hover {
+    background: linear-gradient(45deg, #236e08, #776eea);
+    transform: translateY(-15px);
+}
+
+.sample--transformation--timing {
+    transition: all 0.3s ease 1s;
+    background: linear-gradient(45deg, #236e08, #776eea);
+}
+
+.sample--transformation--timing:hover {
+    background: linear-gradient(45deg, #236e08, #776eea);
+    transform: rotate(360deg) scale(1.4);
+}
+
+.sample--animation--bounce {
+    animation: bounce 2s infinite; 
+}
+@keyframes bounce{
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+         transform: translateY(-20px)
+    }
+}
+
+.sample--animation--pulse {
+    animation: pulse 1s infinite; 
+}
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+         transform: scale(1.2);
+    }
+}
+
+.sample--animation--spin {
+    animation: spin 2s linear infinite; 
+}
+
+@keyframes spin{
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+         transform: rotate(360deg);
+    }
+    
+}
+
+.sample--animation--opacity {
+    transition: opacity 1s transform ease;
+}
+.sample--animation--opacity:hover {
+    opacity: 0.5;
+    transform: translateY(-10px);
+}
+
+.sample--animation--color {
+    transition: color 1s ease;
+    font-size: 30px;
+}
+.sample--animation--color:hover {
+    color: #0f8915;
+}
+
+.sample--animation--size {
+    transition: font-size 1s ease-in-out;
+}
+.sample--animation--size:hover {
+    font-size: 40px;
 }
